Scaffold production ready changes

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf dist && webpack --mode development --config ./config/webpack.config.js && webpack --mode development",
-    "dev": "rm -rf dist && webpack --mode development --config ./config/webpack.server.js && webpack --mode development --config ./config/webpack.config.js && node ./server/server.js"
+    "lint": "prettier --print-width 80 --semi --single-quote --trailing-comma es5 --write src/**/**/**.js",
+    "build": "rm -rf dist && webpack --mode development --config config/webpack.config.js",
+    "dev": "rm -rf dist && webpack --mode development --config config/webpack.server.js && webpack --mode development --config ./config/webpack.config.js && node ./server/server.js",
+    "buildProd": "webpack -p --config config/webpack.production.js && webpack -p --config config/webpack.server.js",
+    "runProd": "cd ./server/ && NODE_ENV=production node server.js",
+    "buildServer": "webpack -p --config config/webpack.server.js"
   },
   "author": "",
   "license": "ISC",
@@ -25,15 +29,18 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "node-sass": "^4.14.1",
+    "prettier": "^2.0.5",
     "sass-loader": "7.1.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.0",
     "webpack-hot-middleware": "^2.25.0",
